--- a/Frontend/shortly/src/app/app.component.html
+++ b/Frontend/shortly/src/app/app.component.html
@@ -5,6 +5,7 @@
 <table>
   <tr>
     <button (click)="getAll()">Alle URL Paare anzeigen</button><br>
+    <label>Message:&emsp; {{GetAllMessage}}</label><br>
     <label>Return Value: </label>
   <tr *ngFor="let u of Allurl">
     <td>{{u.shortURL}}</td>
@@ -12,9 +13,11 @@
   </tr>
 
   <tr>
-    <br><label for="sURL">ShortURL eingeben: </label>
-    <input type="text" id="sURL" name=shortURL><br>
+    
+    <br><label for="sURL">ShortURL eingeben:&emsp;</label>
+    <label>shortly.at/</label><input type="text" id="sURL" name=shortURL><br>
     <button (click)="getByID()">URL Paar durch ShortURL suchen</button><br>
+    <label>Message:&emsp; {{GetMessage}}</label><br>
     <label>Return Value: </label>
   <tr>
     <td>{{URLByID.shortURL}}</td>
@@ -28,11 +31,12 @@
 
 <table>
   <tr>
-    <label for="PostShortURL">ShortURL eingeben: </label>
-    <input type="text" id="PostShortURL" name=shortURL><br>
+    <label for="PostShortURL">ShortURL eingeben:&emsp;</label>
+    <label>shortly.at/</label><input type="text" id="PostShortURL" name=shortURL><br>
     <label for="PostLongURL">LongURL eingeben: </label>
     <input type="text" id="PostLongURL" name=shortURL><br>
     <button (click)="PostURL()">URL Paar zur Datenbank hinzufügen</button><br>
+    <label>Message:&emsp; {{PostMessage}}</label><br>
     <label>Return Value: </label>
   <tr>
     <td>{{URLPost.shortURL}}</td>
@@ -43,7 +47,10 @@
 <h2>Delete Request</h2>
 
 <table>
-  <label for="sURL">ShortURL eingeben: </label>
-  <input type="text" id="ShortURLDelete" name=shortURL><br>
+  
+  <br><label for = "ShortURLDelete">ShortURL eingeben:&emsp;</label>
+  <label>shortly.at/</label><input type="text" id="ShortURLDelete" name=shortURL><br>
   <button (click)="DeleteURL()">ShortURL aus der Datenbank löschen</button><br>
+  <label>Message:&emsp; {{DeleteMessage}}</label><br>
+  <label>Changes made:&emsp;{{Changes}}</label>
 </table>
