redirecting geht, mainpage extra gelegt und durch angular rerouting einblenden

--- a/Frontend/shortly/src/app/redirect/redirect.component.html
+++ b/Frontend/shortly/src/app/redirect/redirect.component.html
@@ -1,13 +1,3 @@
-<p>redirect works!</p>
-<p>redirect works!</p>
-<p>redirect works!</p>
-<p>redirect works!</p>
+<h1>Redirecting...</h1>
 
-<p>redirect works!</p>
-<p>redirect works!</p>
-<p>redirect works!</p>
-<p>redirect works!</p>
-<p>redirect works!</p>
-<p>redirect works!</p>
-<p>redirect works!</p>
-<a [routerLink]="[]">asda</a>
+
