fixing lost code

--- a/Frontend/shortly/src/app/mainpage/mainpage.component.html
+++ b/Frontend/shortly/src/app/mainpage/mainpage.component.html
@@ -8,8 +8,8 @@
     <label>Message:&emsp; {{GetAllMessage}}</label><br>
     <label>Return Value: </label>
   <tr *ngFor="let u of Allurl">
-    <a href={{u.shortURL}}><td>{{u.shortURL}}</td></a>
-    <a href={{u.longURL}}><td>{{u.longURL}}</td></a>
+    <td>{{u.shortURL}}</td>
+    <td>{{u.longURL}}</td>
   </tr>
 
   <tr>
