--- a/Frontend/shortly/src/app/mainpage/mainpage.component.html
+++ b/Frontend/shortly/src/app/mainpage/mainpage.component.html
@@ -8,7 +8,7 @@
     <label>Message:&emsp; {{GetAllMessage}}</label><br>
     <label>Return Value: </label>
   <tr *ngFor="let u of Allurl">
-    <td>{{u.shortURL}}</td>
+    <td><a href={{u.shortURL}}>shortly.at/{{u.shortURL}}</a></td>
     <td>{{u.longURL}}</td>
   </tr>
 
