--- a/Frontend/shortly/src/app/redirect/redirect.component.html
+++ b/Frontend/shortly/src/app/redirect/redirect.component.html
@@ -1,6 +1,17 @@
-<h1>Sie werden weitergeleitet...</h1>
 
 
-<p>Hier könnte Ihre Werbung stehen!</p>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <h1>Sie werden weitergeleitet...</h1>
 
 
+    <p>Hier könnte Ihre Werbung stehen!</p>
+</body>
+</html>
